# ionir

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build_cmake.yml
include/ionir/codegen/assembly/: assembly_builder.h  x86_assembly_builder.h  x86_pointer.h  x86_register.h
include/ionir/const/: const.h  const_name.h
include/ionir/construct/: attribute_decl.h  basic_block.h  construct.h  constructor.h  destructor.h  extern.h  function.h  function_body.h  function_like.h  global.h  identifier.h  inst.h  inst_yield.h  instruction.h  method.h  module.h  prototype.h  struct.h  struct_definition.h  type.h  value.h
include/ionir/construct/inst/: alloca.h  branch.h  call.h  compare.h  jump.h  operation.h  return.h  store.h
include/ionir/construct/instruction/: alloca.h  branch.h  call.h  cast.h  compare.h  jump.h  return.h  store.h
include/ionir/construct/intrinsic/reflection/: name_of.h  type_of.h
include/ionir/construct/pseudo/: args.h  child_construct.h  comment.h  error_marker.h
include/ionir/construct/type/: boolean_type.h  decimal_type.h  integer_type.h  pointer_type.h  struct.h  struct_decl.h  struct_type.h  void_type.h
include/ionir/construct/value/: boolean_literal.h  char_literal.h  integer_literal.h  operation.h  string_literal.h  struct_definition.h
include/ionir/diagnostics/: diagnostic.h
include/ionir/llvm/: llvm_emitted_entities.h
include/ionir/misc/: attributable.h  bootstrap.h  code_writer.h  construct_builder.h  construct_factory.h  identifiable.h  inst_builder.h  regex.h  safe_wrapper.h  type_factory.h  util.h  value_resolver.h  with_parent.h  wrapper.h
include/ionir/passes/: pass.h
include/ionir/passes/codegen/assembly/: x86_assembly_codegen_pass.h
include/ionir/passes/lowering/: llvm_lowering_pass.h
include/ionir/passes/optimization/: dead_code_elimination_pass.h
include/ionir/passes/semantic/: construct_validation_pass.h  construct_verification_pass.h  entry_point_check_pass.h
include/ionir/passes/type_system/: borrow_check_pass.h  type_check_pass.h
include/ionir/syntax/: ast_builder.h  ast_printer.h  ast_result.h  driver.h
include/ionir/test/: bootstrap.h  comparison.h  filesystem.h
include/ionir/tracking/: array_descriptor.h  class_descriptor.h  context.h  interface_descriptor.h  local_var_descriptor.h  name_mangler.h  scope_anchor.h  symbol_table.h
include/ionir/type_system/: type_util.h
src/: README.md
src/ast/: ast_builder.cpp
src/codegen/assembly/: x86_assembly_builder.cpp
src/const/: const.cpp
src/construct/: basic_block.cpp  construct.cpp  constructor.cpp  destructor.cpp  extern.cpp  function.cpp  function_body.cpp  function_like.cpp  global.cpp  identifier.cpp  inst.cpp  inst_yield.cpp  instruction.cpp  method.cpp  module.cpp  prototype.cpp  struct.cpp  struct_definition.cpp  type.cpp
src/construct/inst/: alloca.cpp  branch.cpp  call.cpp  compare.cpp  jump.cpp  operation.cpp  return.cpp  store.cpp
src/construct/instruction/: alloca.cpp  branch.cpp  call.cpp  cast.cpp  compare.cpp  jump.cpp  return.cpp  store.cpp
src/construct/intrinsic/reflection/: name_of.cpp  type_of.cpp
src/construct/pseudo/: args.cpp  comment.cpp  error_marker.cpp
src/construct/type/: boolean_type.cpp  decimal_type.cpp  integer_type.cpp  pointer_type.cpp  struct_decl.cpp  struct_type.cpp  void_type.cpp
src/construct/value/: boolean_literal.cpp  char_literal.cpp  integer_literal.cpp  operation.cpp  string_literal.cpp
src/llvm/: llvm_emitted_entities.cpp
src/misc/: bootstrap.cpp  code_writer.cpp  identifiable.cpp  inst_builder.cpp  type_factory.cpp  util.cpp  value_resolver.cpp
src/passes/: pass.cpp
src/passes/codegen/: x86_assembly_codegen_pass.cpp
src/passes/lowering/: llvm_lowering_pass.cpp  llvm_lowering_pass_function_like.cpp  llvm_lowering_pass_inst.cpp  llvm_lowering_pass_prototype.cpp  llvm_lowering_pass_value.cpp
src/passes/optimization/: dead_code_elimination_pass.cpp
src/passes/semantic/: construct_validation_pass.cpp  construct_verification_pass.cpp  entry_point_check_pass.cpp
src/passes/type_system/: borrow_check_pass.cpp  type_check_pass.cpp
src/test/: bootstrap.cpp  comparison.cpp
src/tracking/: class_descriptor.cpp  context.cpp  interface_descriptor.cpp  name_mangler.cpp
src/type_system/: type_util.cpp
test/: inst_builder.cpp  pch.h  ref.cpp
test/codegen/: code_gen.cpp  full_conversion.cpp
test/construct/: basic_block.cpp  module.cpp
test/output/: extern_simple.ll  function_empty.ll  global_empty.ll  global_init.ll  inst_alloca.ll  inst_alloca_store_return_ref.ll  inst_return_i32.ll
test/passes/: type_check_pass.cpp
test/test/: test_api.cpp
